# vendor_oniro

./: .gitignore  README.en.md  README.md
rpi3/: config.json  product.gni
rpi3/hals/audio/: product.gni
rpi3/hdf_config/khdf/: .built-in.a.cmd  .hdf_hcs_hex.o.d  Makefile  hdf.hcs  hdf_hcs.hcb
rpi3/hdf_config/uhdf/: ._device_info.hcs  device_info.hcs  usb_ecm_acm.hcs  usb_pnp_device.hcs
rpi3/power_config/: power_mode_config.xml
rpi4/: bundle.json  config.json  ohos.build  product.gni
rpi4/audio/: BUILD.gn
rpi4/custom_conf/: BUILD.gn
rpi4/custom_conf/bootanimation/: BUILD.gn  bootanimation_custom_config.json
rpi4/custom_conf/disp_power/: BUILD.gn
rpi4/custom_conf/power_config/: BUILD.gn
rpi4/custom_conf/window/: BUILD.gn  display_manager_config.xml
rpi4/default_app_config/: BUILD.gn
rpi4/etc/: BUILD.gn
rpi4/etc/para/: hardware_rpi4.para  product_rpi4.para
rpi4/hals/audio/: BUILD.gn
rpi4/hals/codec/: BUILD.gn
rpi4/hdf_config/khdf/: hdf.hcs
rpi4/hdf_config/uhdf/: BUILD.gn  device_info.hcs
rpi4/image_conf/: BUILD.gn  updater_image_conf.txt
rpi4/preinstall-config/: BUILD.gn
rpi4/resourceschedule/: BUILD.gn
rpi4/resourceschedule/soc_perf/: socperf_resource_config.xml
rpi4/sample/: BUILD.gn
rpi4/sample/gpio/: BUILD.gn  gpio_test.c
rpi4_small/: BUILD.gn  config.json  ohos.build
rpi4_small/hdf_config/: hdf.hcs
rpi4_small/hdf_config/device_info/: device_info.hcs
rpi4_small/init_configs/: BUILD.gn  init_linux_rpi4_openharmony_debug.cfg  init_linux_rpi4_openharmony_release.cfg
rpi4_small/init_configs/etc/: fstab
(+35 files in other folders)
